fixed some mobile issues. Now all 3 pages work on mobile.

--- a/HTML/styles/main.scss
+++ b/HTML/styles/main.scss
@@ -450,7 +450,7 @@ h1 {
   }
 }
 
-@media screen and (max-width: 860px) {
+@media handheld, screen and (max-width: 860px) {
 
 .menu-item {
     width: 50%;
@@ -610,7 +610,7 @@ h1 {
 }
 }
 
-@media screen and (max-width: 560px) {
+@media handheld, screen and (max-width: 560px) {
 
   .menu-item {
       width: 90%;
